<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickMovieDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movieParamFrag"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:background="@color/dark_white">

        <TextView
            android:id="@+id/movie_param_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MovieParams"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/pick_cancel_button"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Cancel"
            android:textSize="12sp"
            android:backgroundTint="@color/blue_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/continue_to_selection_id"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Continue"
            android:textSize="12sp"
            android:backgroundTint="@color/blue_main"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:gravity="center"
            android:text="@string/Length"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/rel_genre"
            app:layout_constraintBottom_toTopOf="@+id/rel_genre" />

        <RelativeLayout
            android:id="@+id/rel_length"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:background="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_param_title"
            android:layout_marginTop="30dp"
            android:layout_marginRight="35dp">

            <Spinner
                android:id="@+id/length_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Genre"
            android:textSize="16sp"
            android:layout_marginTop="95dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_param_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/rel_genre"
            />

        <RelativeLayout
            android:id="@+id/rel_genre"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:background="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_param_title"
            android:layout_marginTop="95dp"
            android:layout_marginRight="35dp">

            <Spinner
                android:id="@+id/genre_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown" />
        </RelativeLayout>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/Platform"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/rel_genre"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/rel_platform"
            />

        <RelativeLayout
            android:id="@+id/rel_platform"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:background="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rel_genre"
            android:layout_marginTop="40dp"
            android:layout_marginRight="35dp">

            <Spinner
                android:id="@+id/platform_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>