<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <TextView
        android:id="@+id/log_in_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogIn"
        android:layout_marginTop="150dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="164dp" />

    <EditText
        android:id="@+id/email_input_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/log_in_title_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="226dp" />

    <EditText
        android:id="@+id/password_input_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="75dp"
        app:layout_constraintTop_toBottomOf="@+id/email_input_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="285dp" />

    <Button
        android:id="@+id/log_in_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogIn"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue_main"
        app:layout_constraintTop_toBottomOf="@+id/password_input_id"
        app:layout_constraintRight_toRightOf="@+id/password_input_id"
        tools:layout_editor_absoluteX="266dp"
        tools:layout_editor_absoluteY="341dp" />

    <TextView
        android:id="@+id/create_account_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateAcct"
        android:layout_marginTop="75dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_button_id"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="458dp" />

    <Button
        android:id="@+id/create_account_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue_main"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_title_id"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="493dp" />

    <TextView
        android:id="@+id/email_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:layout_marginTop="65dp"
        app:layout_constraintRight_toRightOf="@+id/password_title_id"
        app:layout_constraintTop_toBottomOf="@+id/log_in_title_id"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="239dp" />

    <TextView
        android:id="@+id/password_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:layout_marginTop="135dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/password_input_id"
        app:layout_constraintTop_toBottomOf="@+id/log_in_title_id"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="298dp" />
</androidx.constraintlayout.widget.ConstraintLayout>