<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/act_main_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_white"
        tools:context=".MainActivity">


        <Button
            android:id="@+id/start_pick_btn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="85dp"
            android:backgroundTint="@color/blue_main"
            android:text="@string/start_pick_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addMovieButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:backgroundTint="@color/blue_main"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/addbutton"
            tools:layout_editor_absoluteX="337dp"
            tools:layout_editor_absoluteY="655dp" />


        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="90dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/simplify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Watchlist"
            android:textSize="20dp"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/home_watchlist_id"/>


        <ScrollView
            android:id="@+id/home_watchlist_id"
            android:layout_width="225dp"
            android:layout_height="325dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rectangle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simplify"
            app:layout_constraintBottom_toTopOf="@+id/start_pick_btn">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/recycle_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/actMainRecycle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:nestedScrollingEnabled="true">
                    </androidx.recyclerview.widget.RecyclerView>

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/navToolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navi"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/menu_bar"
        android:background="@color/blue_main"
        android:fitsSystemWindows="true"
        android:layout_gravity="left">

    </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>