<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".DisplaySelectedMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/dark_white"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_white">

                <TextView
                    android:id="@+id/using_app"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/using_app"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/how_to_pick_title"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_movie"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/using_app"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/pick_title_gif"
                    android:layout_width="225dp"
                    android:layout_height="400dp"
                    android:layout_marginTop="15dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/pickmoviehowto"
                    app:layout_constraintTop_toBottomOf="@+id/how_to_pick_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/how_to_add_title"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_movie"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pick_title_gif"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/add_title_gif"
                    android:layout_width="225dp"
                    android:layout_height="400dp"
                    android:layout_marginTop="15dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/addmoviehowto"
                    app:layout_constraintTop_toBottomOf="@+id/how_to_add_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/how_to_watchlist_title"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/view_watchlist"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_title_gif"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/watchlist_gif"
                    android:layout_width="225dp"
                    android:layout_height="400dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/watchlisthowto"
                    app:layout_constraintTop_toBottomOf="@+id/how_to_watchlist_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/navToolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navi"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/menu_bar"
        android:background="@color/blue_main"
        android:fitsSystemWindows="true"
        android:layout_gravity="left">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>