<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_white">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="175dp"
                android:layout_height="250dp"
                android:layout_marginTop="50dp"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/movTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poster"/>

            <TextView
                android:id="@+id/movLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:text="@string/mLength"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movTitle"/>

            <TextView
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/movLength"
                app:layout_constraintLeft_toRightOf="@id/movLength"/>

            <TextView
                android:id="@+id/movGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:text="@string/Genre"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/length"/>

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@+id/movGenre"
                app:layout_constraintLeft_toRightOf="@id/movGenre"/>

            <TextView
                android:id="@+id/movRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:text="@string/Rating"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genre"/>

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="15dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@+id/movRating"
                app:layout_constraintLeft_toRightOf="@id/movRating"/>

            <TextView
                android:id="@+id/movDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:text="@string/Description"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:textSize="15dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/movDescription"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintLeft_toLeftOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>